--- a/Ischool.discipline_competition.csproj
+++ b/Ischool.discipline_competition.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DAO\Actor.cs" />
+    <Compile Include="DAO\Admin.cs" />
     <Compile Include="DisciplineCompetitionPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
