--- a/Ischool.discipline_competition.csproj
+++ b/Ischool.discipline_competition.csproj
@@ -34,6 +34,7 @@
     <Compile Include="DAO\Actor.cs" />
     <Compile Include="DAO\Admin.cs" />
     <Compile Include="DAO\CheckItem.cs" />
+    <Compile Include="DAO\Period.cs" />
     <Compile Include="DAO\SemesterRank.cs" />
     <Compile Include="DAO\WeeklyRank.cs" />
     <Compile Include="DisciplineCompetitionPanel.cs">
