修改【管理評分紀錄】功能 1.座號座標驗證邏輯:可以都輸入、擇一輸入或者都不輸入。 2.新增「是否取消」篩選條件

--- a/Ischool.discipline_competition.csproj
+++ b/Ischool.discipline_competition.csproj
@@ -35,6 +35,7 @@
     <Compile Include="DAO\Admin.cs" />
     <Compile Include="DAO\CheckItem.cs" />
     <Compile Include="DAO\Period.cs" />
+    <Compile Include="DAO\ScoreSheet.cs" />
     <Compile Include="DAO\SemesterRank.cs" />
     <Compile Include="DAO\WeeklyRank.cs" />
     <Compile Include="DisciplineCompetitionPanel.cs">
