--- a/Ischool.discipline_competition.csproj
+++ b/Ischool.discipline_competition.csproj
@@ -49,6 +49,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Ribbon\ScoreSheetReport\ScoreSheetReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ribbon\ScoreSheetReport\ScoreSheetReport.Designer.cs">
+      <DependentUpon>ScoreSheetReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Ribbon\ScoreSheet\frmAddScoreSheet.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -227,6 +233,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Library\FISCA.dll.config" />
+    <None Include="Resources\加扣分違規表樣板.xlsx" />
     <None Include="Resources\學期統計排名樣板.xlsx" />
     <None Include="Resources\週統計樣板.xlsx" />
   </ItemGroup>
@@ -382,6 +389,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ribbon\ScoreSheetReport\ScoreSheetReport.resx">
+      <DependentUpon>ScoreSheetReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ribbon\ScoreSheet\frmAddScoreSheet.resx">
       <DependentUpon>frmAddScoreSheet.cs</DependentUpon>
