--- a/Ischool.discipline_competition.csproj
+++ b/Ischool.discipline_competition.csproj
@@ -162,12 +162,17 @@
     <Content Include="Library\Campus.Report.dll" />
     <Content Include="Library\Campus.Windows.dll" />
     <Content Include="Library\Campus.Windows.xml" />
-    <Content Include="Library\CefSharp.Core.dll" />
-    <Content Include="Library\CefSharp.dll" />
-    <Content Include="Library\CefSharp.WinForms.dll" />
     <Content Include="Library\Customization.Tagging.dll" />
     <Content Include="Library\Customization.Tagging.pdb" />
     <Content Include="Library\DevComponents.DotNetBar2.dll" />
+    <Content Include="Library\EO.Base.dll" />
+    <Content Include="Library\EO.Base.xml" />
+    <Content Include="Library\EO.WebBrowser.dll" />
+    <Content Include="Library\EO.WebBrowser.WinForm.DLL" />
+    <Content Include="Library\EO.WebBrowser.WinForm.xml" />
+    <Content Include="Library\EO.WebBrowser.xml" />
+    <Content Include="Library\EO.WebEngine.dll" />
+    <Content Include="Library\EO.WebEngine.xml" />
     <Content Include="Library\FISCA.Authentication.dll" />
     <Content Include="Library\FISCA.Authentication.pdb" />
     <Content Include="Library\FISCA.Authentication.xml" />
@@ -273,21 +278,6 @@
       <HintPath>Library\Campus.Windows.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="CefSharp, Version=57.0.0.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Library\CefSharp.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="CefSharp.Core, Version=57.0.0.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Library\CefSharp.Core.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="CefSharp.WinForms, Version=57.0.0.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Library\CefSharp.WinForms.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Customization.Tagging, Version=1.0.0.3, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Library\Customization.Tagging.dll</HintPath>
@@ -296,6 +286,16 @@
     <Reference Include="DevComponents.DotNetBar2, Version=9.5.0.1, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Library\DevComponents.DotNetBar2.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="EO.WebBrowser, Version=20.2.90.0, Culture=neutral, PublicKeyToken=e92353a6bf73fffc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Library\EO.WebBrowser.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="EO.WebBrowser.WinForm, Version=20.2.90.0, Culture=neutral, PublicKeyToken=e92353a6bf73fffc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Library\EO.WebBrowser.WinForm.DLL</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="FISCA, Version=2.5.0.1, Culture=neutral, processorArchitecture=MSIL">
