2021-12-15 Cynthia 因原先操作指南無法在x64版本上作為背景載入，故參考俊威的意見，將操作指南另外用一個button點擊開啟。
https://3.basecamp.com/4399967/buckets/15765350/todos/4448312891

--- a/Ischool.discipline_competition.csproj
+++ b/Ischool.discipline_competition.csproj
@@ -225,6 +225,7 @@
     <Content Include="Library\SmartSchool.Customization.PlugIn.xml" />
     <Content Include="Library\SmartSchool.ErrorReporting.dll" />
     <Content Include="Library\SmartSchool.ErrorReporting.xml" />
+    <Content Include="Resources\03.png" />
     <None Include="Resources\foreign_language_config_64.png" />
     <None Include="Resources\presentation_a_config_64.png" />
     <None Include="Resources\blacklist_zoom_128.png" />
